from typing import Dict, List, Optional, Any
import numpy as np
from datetime import datetime
import logging
from dataclasses import dataclass
from sklearn.preprocessing import StandardScaler
from tensorflow.keras.models import Sequential
from tensorflow.keras.layers import LSTM, Dense
from prometheus_api_client import PrometheusConnect

logging.basicConfig(level=logging.INFO)
logger = logging.getLogger(__name__)

@dataclass
class AnomalyResult:
    """異常検知結果"""
    timestamp: datetime
    metric_name: str
    value: float
    severity: str
    anomaly_score: float
    detection_method: str
    additional_info: Dict

class MetricCollector:
    def __init__(self, prometheus_url: str, metric_configs: Dict):
        """
        メトリクス収集クラス
        Args:
            prometheus_url: PrometheusのURL
            metric_configs: メトリクス設定
        """
        self.prometheus_client = PrometheusConnect(url=prometheus_url)
        self.metric_configs = metric_configs

    def collect_metrics(self) -> Dict:
        """メトリクスの収集"""
        try:
            metrics = {}
            for metric_name, config in self.metric_configs.items():
                query = config['query']
                result = self.prometheus_client.custom_query(query)
                metrics[metric_name] = self._process_raw_metrics(result)
            return metrics
        except Exception as e:
            logger.error(f"Error collecting metrics: {e}")
            raise

    def get_historical_data(self, 
                          metric_name: str, 
                          start_time: datetime,
                          end_time: datetime) -> List[Dict]:
        """履歴データの取得"""
        try:
            query = self.metric_configs[metric_name]['query']
            result = self.prometheus_client.custom_query_range(
                query,
                start_timestamp=start_time,
                end_timestamp=end_time,
                step='1m'
            )
            return self._process_raw_metrics(result)
        except Exception as e:
            logger.error(f"Error getting historical data: {e}")
            raise

    def _process_raw_metrics(self, raw_metrics: List) -> List[Dict]:
        """生メトリクスの処理"""
        processed = []
        for metric in raw_metrics:
            processed.append({
                'timestamp': datetime.fromtimestamp(float(metric['value'][0])),
                'value': float(metric['value'][1]),
                'labels': metric['metric']
            })
        return processed

class MetricProcessor:
    def __init__(self, window_size: int, aggregation_rules: Dict):
        """
        メトリクス処理クラス
        Args:
            window_size: 分析ウィンドウサイズ
            aggregation_rules: 集約ルール
        """
        self.window_size = window_size
        self.aggregation_rules = aggregation_rules

    def process_metrics(self, metrics: Dict) -> Dict:
        """メトリクスの処理"""
        try:
            processed_metrics = {}
            for metric_name, values in metrics.items():
                # メトリクスの集約
                aggregated = self._aggregate_metrics(values)
                # 導出メトリクスの計算
                derivatives = self._calculate_derivatives(aggregated)
                processed_metrics[metric_name] = {
                    'aggregated': aggregated,
                    'derivatives': derivatives
                }
            return processed_metrics
        except Exception as e:
            logger.error(f"Error processing metrics: {e}")
            raise

    def _aggregate_metrics(self, values: List[Dict]) -> Dict:
        """メトリクスの集約"""
        aggregated = {
            'mean': np.mean([v['value'] for v in values]),
            'std': np.std([v['value'] for v in values]),
            'min': np.min([v['value'] for v in values]),
            'max': np.max([v['value'] for v in values])
        }
        return aggregated

    def _calculate_derivatives(self, aggregated: Dict) -> Dict:
        """導出メトリクスの計算"""
        derivatives = {
            'range': aggregated['max'] - aggregated['min'],
            'variance': aggregated['std'] ** 2,
            'cv': aggregated['std'] / aggregated['mean'] if aggregated['mean'] != 0 else 0
        }
        return derivatives

class LSTMModel:
    def __init__(self, input_size: int, hidden_size: int, num_layers: int):
        """
        LSTMモデルクラス
        Args:
            input_size: 入力サイズ
            hidden_size: 隠れ層サイズ
            num_layers: レイヤー数
        """
        self.model = self._build_model(input_size, hidden_size, num_layers)

    def _build_model(self, input_size: int, hidden_size: int, num_layers: int) -> Sequential:
        """モデルの構築"""
        model = Sequential()
        model.add(LSTM(hidden_size, input_shape=(input_size, 1), return_sequences=True))
        for _ in range(num_layers - 2):
            model.add(LSTM(hidden_size, return_sequences=True))
        model.add(LSTM(hidden_size))
        model.add(Dense(1))
        model.compile(optimizer='adam', loss='mse')
        return model

    def train(self, data: np.ndarray) -> None:
        """モデルの学習"""
        X, y = self._prepare_sequences(data)
        self.model.fit(X, y, epochs=100, batch_size=32, verbose=0)

    def predict(self, data: np.ndarray) -> np.ndarray:
        """予測の実行"""
        X, _ = self._prepare_sequences(data)
        return self.model.predict(X)

    def _prepare_sequences(self, data: np.ndarray) -> tuple:
        """シーケンスデータの準備"""
        X, y = [], []
        for i in range(len(data) - self.input_size):
            X.append(data[i:i+self.input_size])
            y.append(data[i+self.input_size])
        return np.array(X), np.array(y)

class ValidationEngine:
    def __init__(self, validation_rules: Dict, threshold_configs: Dict):
        """
        検証エンジンクラス
        Args:
            validation_rules: 検証ルール
            threshold_configs: 閾値設定
        """
        self.validation_rules = validation_rules
        self.threshold_configs = threshold_configs

    def validate_metrics(self, metrics: Dict) -> List[Dict]:
        """メトリクスの検証"""
        try:
            validation_results = []
            for metric_name, values in metrics.items():
                # 閾値チェック
                threshold_violations = self._check_thresholds(metric_name, values)
                # パターン検証
                pattern_violations = self._validate_patterns(metric_name, values)
                
                if threshold_violations or pattern_violations:
                    validation_results.append({
                        'metric_name': metric_name,
                        'threshold_violations': threshold_violations,
                        'pattern_violations': pattern_violations
                    })
            return validation_results
        except Exception as e:
            logger.error(f"Error validating metrics: {e}")
            raise

class AlertManager:
    def __init__(self, severity_levels: Dict, notification_channels: List):
        """
        アラート管理クラス
        Args:
            severity_levels: 重要度レベル
            notification_channels: 通知チャンネル
        """
        self.severity_levels = severity_levels
        self.notification_channels = notification_channels

    def process_anomalies(self, anomalies: Dict) -> None:
        """異常の処理"""
        try:
            for anomaly in anomalies:
                severity = self._determine_severity(anomaly)
                message = self._create_alert_message(anomaly, severity)
                self.send_alert(message)
        except Exception as e:
            logger.error(f"Error processing anomalies: {e}")
            raise

    def send_alert(self, message: str) -> None:
        """アラートの送信"""
        for channel in self.notification_channels:
            try:
                # 実際の通知チャンネルに合わせて実装
                logger.info(f"Sending alert to {channel}: {message}")
            except Exception as e:
                logger.error(f"Error sending alert to {channel}: {e}")

class DetectionService:
    def __init__(self, 
                 prometheus_url: str,
                 metric_configs: Dict,
                 window_size: int = 60,
                 threshold_std: float = 3.0):
        """
        異常検知サービス
        Args:
            prometheus_url: PrometheusのURL
            metric_configs: メトリクス設定
            window_size: 分析ウィンドウサイズ
            threshold_std: 標準偏差の閾値
        """
        self.collector = MetricCollector(prometheus_url, metric_configs)
        self.processor = MetricProcessor(window_size, {})
        self.detector = AnomalyDetector(window_size, threshold_std)
        self.validator = ValidationEngine({}, {})
        self.alert_manager = AlertManager({}, [])

    def run_detection(self) -> List[AnomalyResult]:
        """異常検知の実行"""
        try:
            # メトリクスの収集
            metrics = self.collector.collect_metrics()
            
            # メトリクスの処理
            processed_metrics = self.processor.process_metrics(metrics)
            
            # 異常検知の実行
            anomalies = self.detector.detect_anomalies(processed_metrics)
            
            # 検証の実行
            validation_results = self.validator.validate_metrics(processed_metrics)
            
            # アラート処理
            if anomalies:
                self.alert_manager.process_anomalies(anomalies)
            
            return anomalies

        except Exception as e:
            logger.error(f"Error in detection service: {e}")
            raise

    def update_thresholds(self, new_thresholds: Dict) -> None:
        """閾値の更新"""
        self.detector.thresholds.update(new_thresholds)

    def add_notification_channel(self, channel: str) -> None:
        """通知チャンネルの追加"""
        self.alert_manager.notification_channels.append(channel)

# 使用例
if __name__ == "__main__":
    # 設定
    metric_configs = {
        'cpu_usage': {
            'query': 'sum(rate(node_cpu_seconds_total{mode="idle"}[5m])) by (instance)'
        },
        'memory_usage': {
            'query': 'node_memory_MemTotal_bytes - node_memory_MemAvailable_bytes'
        }
    }

    # サービスのインスタンス化
    detection_service = DetectionService(
        prometheus_url='http://localhost:9090',
        metric_configs=metric_configs,
        window_size=60,
        threshold_std=3.0
    )

    try:
        # 異常検知の実行
        anomalies = detection_service.run_detection()
        
        # 結果の表示
        for anomaly in anomalies:
            logger.info(f"Detected anomaly: {anomaly}")
            
    except Exception as e:
        logger.error(f"Error running detection service: {e}")
        